# Taquin

Taquin/: CMakeLists.txt  CMakeLists.txt.user.593b870  CMakeLists.txt.user.6e25915  Taquin.pro  Taquin.pro.user.66b4357  livre.qph  livres.qph  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projet_diga1_fr_FR.qm  projet_diga1_fr_FR.ts  projet_diga_en_US.ts  projet_diga_fr_FR.qm  projet_diga_fr_FR.ts  ressource.qrc  saisietaille.cpp  saisietaille.h  saisietaille.ui
Taquin/Sauvegarder/: partie_3x3.save
build-Taquin-Desktop-Debug/: Makefile  Taquin  moc_mainwindow.cpp  moc_saisietaille.cpp  ui_mainwindow.h  ui_saisietaille.h
